[FIX] backend quality - quality: medium fixes solved